<?xml version="1.0"?>
<package>
  <name>ldtravocean</name>
  <version>0.1.1</version>
  <description>The ldtravocean package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dula.nad@gmail.com">dnad</maintainer>
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/ldtravocean</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>snippets</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>labust_navigation</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>snippets</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>labust_navigation</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
      <rqt_gui plugin="${prefix}/plugins.xml"/>
  </export>
  
</package>
