<?xml version="1.0"?>
<package>
  <name>ldtravocean</name>
  <version>0.1.1</version>
  <description>The ldtravocean package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dula.nad@gmail.com">dnad</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>snippets</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>labust_navigation</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>snippets</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>labust_navigation</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>tf2_ros</run_depend>
</package>
