<?xml version="1.0"?>
<package>
  <name>matlogger</name>
  <version>0.8.0</version>
	<description>
		The matlogger package contains logger information for syncronous data logging into csv for 
		easier matlab plotting. The package is used as a shortcut to avoid rosbag, especially in
		embedded low disk space scenarios.
	</description>
	
	<maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <author email="dula.nad@gmail.com">Gyula Nagy</author>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/matlogger</url> -->

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
