<?xml version="1.0"?>
<package>
  <name>snippets</name>
  <version>0.1.0</version>
  <description>
      The snippets package contains shared code definitions and 
      various helper tools for ROS oriented applications. 
  </description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <author email="dula.nad@gmail.com">Gyula Nagy</author>
  <!-- <url type="website">http://ros.org/wiki/snippets</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
