<?xml version="1.0"?>
<package>
  <name>bvt_sdk</name>
  <version>1.0.0</version>
  <description>
  	The package installs the BlueView SDK used for control of BlueView sonars. It also
  	defines a BlueView sonar node.
  </description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <author email="dula.nad@gmail.com">Gyula Nagy</author>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/bvt_sdk</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>aidnav_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>aidnav_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
