<?xml version="1.0"?>
<package>
  <name>caddy_ui</name>
  <version>0.1.0</version>
	<description>
		The user interface collection for the caddy project.
	</description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <author email="dula.nad@gmail.com">Gyula NagyJane Doe</author>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/caddy_ui</url> -->
	
	<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>labust_base</build_depend>
  
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>rqt_gui_py</build_depend>
   
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>labust_base</run_depend>
  
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  
  <export>
    <rqt_gui plugin="${prefix}/plugins.xml"/>
  </export>
</package>
